[project]
name = "image-portal-workflows"
version = "0.1.0"
description = "Image portal workflows using Prefect, Dask, and scientific Python tools."
readme = "README.rst"
authors = [
    { name = "Philip MacMenamin", email = "philip.macmenamin@nih.gov" },
    { name = "Bradley Lowekamp", email = "blowekamp@mail.nih.gov" },
    { name = "Anish Shrestha", email = "anish.shrestha@nih.gov" },
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.9.5",
    "dask-jobqueue==0.9.0",
    "griffe==1.7.3",
    "jinja2==3.1.6",
    "natsort==8.4.0",
    "prefect[dask]==3.4.8",
    "python-dotenv==1.1.1",
    "pytools",
    "requests==2.32.3",
    "simpleitk==2.5.2",
]

[tool.uv.sources]
pytools = { url = "https://github.com/niaid/tomojs-pytools/releases/download/v3.3.2/pytools-3.3.2-py3-none-any.whl" }
dask-jobqueue = { git = "https://github.com/dask/dask-jobqueue.git", rev = "b07308ea36da20ba4a109e53799e1dc26b613762" }

[dependency-groups]
dev = [
    "black==24.4.2",
    "coverage>=7.10.7",
    "coverage-badge>=1.1.2",
    "flake8==7.0.0",
    "pre-commit==3.7.0",
    "pytest~=8.3",
    "pytest-asyncio==0.23.7",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.5",
    "sphinx-autobuild==2021.3.14",
    "sphinx-rtd-theme==2.0.0",
]
